# linorobot_4wd

./: .gitignore  CMakeLists.txt  README.md  package.xml
arduino/BTS7960/src/: lino_base_4wd.ino  lino_base_mecanum.ino
arduino/L298/src/: lino_base_4wd.ino
arduino/driver/: .sconsign.dblite  platformio.ini
arduino/driver/.AppleDouble/: .Parent  .catkin_workspace  platformio.ini
arduino/driver/lib/.AppleDouble/: .Parent
arduino/driver/lib/Encoder/.AppleDouble/: .Parent  Encoder.cpp  Encoder.h  keywords.txt
arduino/driver/lib/config/: lino_base_config.h
arduino/driver/lib/config/.AppleDouble/: .Parent  lino_base_config.h
arduino/driver/lib/imu/.AppleDouble/: .Parent  accelerometer.h  accelerometer_ADXL345.h  gyroscope.h  gyroscope_ITG3205.h  gyroscope_L3G4200D.h  imu_configuration.h  imu_wire.h  magnetometer.h  magnetometer_HMC5883L.h
arduino/driver/lib/motor/: Motor.cpp  Motor.h
arduino/driver/lib/ros_lib/.AppleDouble/: .Parent  (+4 more)
arduino/driver/src/: lino_base_4wd.ino  lino_base_arduino.cpp  lino_base_arduino.ino
arduino/driver/src/.AppleDouble/: .Parent  CMakeLists.txt  lino_base_arduino.cpp
arduino/firmware/.pioenvs/: .sconsign.dblite  structure.hash
arduino/firmware/.pioenvs/teensy31/: firmware.elf  firmware.hex
arduino/firmware/src/: lino_base_4wd.ino
launch/: bringup.launch  laser.launch  minimal.launch  navigate.launch  slam.launch
param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  imu.yaml  local_costmap_params.yaml  move_base_params.yaml
src/: base_laser_tf_4wd.cpp  lino_base_node_4wd.cpp
(+133 files in other folders)
